--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
-    "watch": "ng build --watch --configuration development",
-    "heroku-postbuild": "ng build --prod"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
